# relago

./: .gitignore  Cargo.toml  default.nix  dhat-heap.json  example-config.toml  flake.nix  justfile  module.nix  readme.md  shell.nix  tmp.json
.github/workflows/: test.yml
crates/alert/: Cargo.toml  error.json  errors.json
crates/alert/src/: error_row.rs  main.rs  window.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/config/: Cargo.toml
crates/config-macro/: Cargo.toml
crates/config-macro/src/: lib.rs
crates/config/src/: error.rs  lib.rs
crates/crash-event/: Cargo.toml
crates/crash-event/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: core.rs  crash.rs  fetcher.rs  journal.rs  lib.rs  registry.rs
crates/export/: Cargo.toml
crates/export/src/: lib.rs
crates/gnome-relago/: Cargo.toml
crates/gnome-relago/src/: lib.rs
crates/gnome-relago/src/window/: model.rs
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs
crates/gui/src/window/: messages.rs  mod.rs  model.rs  report.rs
crates/nixlog/: Cargo.toml
crates/nixlog/src/: error.rs  lib.rs
crates/notify/: Cargo.toml  error.json
crates/notify/src/: lib.rs  main.rs  window.rs
crates/notify/src/window/: messages.rs  mod.rs  model.rs  report.rs
crates/relago-journal-ext/: Cargo.toml
crates/relago-journal-ext/src/: lib.rs
crates/report/: Cargo.toml
crates/report/src/: compress.rs  encrypt.rs  info.rs  lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: combinators.rs  config.rs  error.rs  journal_ext.rs  lib.rs  notify.rs  setup_key.rs
data/: org.freedesktop.Xinux.relago.service  org.freedesktop.Xinux.relago.xml
server.pub/: idfile  public.asc  user.priv  user.pub
