

[workspace]

resolver = "2"
default-members = ["crates/cli"]
members = ["crates/cli", "crates/daemon", "crates/utils", "crates/nixlog"]

[workspace.package]
# Don't remove `name` regardless of warnings
# Lots of nix things depend on this value alone
name = "relago"
version = "0.0.2"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Automatic bug reporting app for xinux"
homepage = "https://artifact.xinux.uz"
repository = "https://github.com/xinux-org/relago"
authors = ["Xinux Developers <support@oss.uzinfocom.uz>"]

# Shared dependencies across crates
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
# tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
# actix-web = "4"
# dotenvy = "0.15.7"
toml = { version = "0.8.20", features = ["display"] }
thiserror = "1"
anyhow = "1"
subprocess = "0.2.9"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nom = "8.0.0"
dbus = "0.9.10"
dbus-tree = "0.9.2"
dbus-crossroads = "0.5.3"

# Optimize release binary as much as possible
[profile.release]
# codegen-units = 1
# incremental = true
# lto = true
# strip = true
# opt-level = "z"
