[package]
name = "alert"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "alert"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify-rust = "4"
relm4 = "0.10.1"
relm4-components = "0.10.1"
gtk = { version = "0.10.0", package = "gtk4", features = ["v4_12"] }
