[package]
name = "alert"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "alert"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify-rust = "4"
relm4 = {version = "0.9.1", features=["macros", "libadwaita", "gnome_47"]}
relm4-components = "0.9.1"
reqwest = "0.13.2"
