[package]
name = "cli"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "relago"
path = "src/main.rs"

[dependencies]
# Relative Dependencies
# http = { path = "../http" }
utils = { path = "../utils" }
nixlog ={ path = "../nixlog"}
daemon ={ path = "../daemon"}
report ={ path = "../report"}

# Third party dependencies
clap = { version = "4.5.28", features = ["derive", "cargo"] }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
subprocess = { workspace = true }
