[package]
name = "cli"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "relago"
path = "src/main.rs"

[dependencies]
# Relative Dependencies
# http = { path = "../http" }
utils = { path = "../utils" }
daemon ={ path = "../daemon"}
notify = { path = "../notify" }
report ={ path = "../report"}

# Third party dependencies
clap = { version = "4.5.28", features = ["derive", "cargo", "string"] }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
subprocess = { workspace = true }
# relm4 = { workspace = true }
# pprof2 = { version = "0.13.1",  features = ["protobuf-codec", "flamegraph",  "cpp"]}

pprof2 = "0.13.1"
# jemalloc_pprof = { version = "0.7", features = ["symbolize"] }
dhat = "0.3.3"
relm4.workspace = true

# [features]
# protobuf-codec=[]
# cpp = ["pprof2"]
# dhat-heap = []
# [profile.profiling]
# inherits = "dev"
# opt-level = 1
# debug = true
