[package]
name = "cli"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "relago"
path = "src/main.rs"

[dependencies]
utils = { path = "../utils" }
daemon ={ path = "../daemon"}
gui = { path = "../gui" }
report ={ path = "../report"}

clap = { version = "4.5.28", features = ["derive", "cargo", "string"] }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
subprocess = { workspace = true }

pprof2 = "0.13.1"
dhat = "0.3.3"
relm4.workspace = true
struct_iterable = "0.1.1"
tokio = {version = "1.51.0", features = [ "full" ]}
futures-util.workspace = true
