[package]
name = "daemon"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
serde_json = "1"
libsystemd-sys = "0.9.4"
systemd = "0.10.1"
dbus = { workspace = true }
utils = { path = "../utils" }
dbus-crossroads = { workspace = true }
nom = { workspace = true }
crash-event = { path = "../crash-event" }