[package]
name = "gui"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "gui"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
relm4.workspace = true
relm4-components = "0.9.1"
reqwest = { version = "0.13.2", features = [ "multipart", "blocking" ]}
anyhow.workspace = true
report = { path = "../report" }
utils = { path = "../utils" }
tokio = "1.50.0"
zbus.workspace = true
futures-util.workspace = true
notify-rust = "4.14.0"
