[package]
name = "gui"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "gui"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
relm4.workspace = true
relm4-components = "0.9.1"
reqwest.workspace = true
anyhow.workspace = true
report = { path = "../report" }
utils = { path = "../utils" }
tokio = "1.50.0"
zbus.workspace = true
futures-util.workspace = true
notify-rust = "4.14.0"
