[package]
name = "notify"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "notify"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify-rust = "4"
relm4.workspace = true
relm4-components = "0.9.1"
# relm4-components = { version = "0.9.1", features = ["libadwaita"]}
reqwest = { version = "0.13.2", features = [ "multipart", "blocking" ]}
anyhow.workspace = true
report ={ path = "../report"}
futures = "0.3.32"
tokio = "1.50.0"
