[package]
name = "utils"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
toml_edit = { version = "0.25.10+spec-1.1.0", features = ["serde"] }
serde = { workspace = true }
dbus = { workspace = true }
dbus-crossroads = { workspace = true }
state = { version = "0.6.0", features = ["tls"] }
systemd = "0.10"
clap = { version = "4.5.28", features = ["derive"] }
confique = { version = "0.4.0", features = ["toml"] }
