[package]
name = "utils"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
toml_edit = { version = "0.25.10+spec-1.1.0", features = ["serde"] }
serde = { workspace = true }
dbus = { workspace = true }
dbus-crossroads = { workspace = true }
syn = { version = "2.0", features = ["derive", "full"] }
quote.workspace = true
proc-macro2.workspace = true
state = {version = "0.6.0", features = [ "tls" ]}
systemd = "0.10"
clap = { version = "4.5.28", features = ["derive"] }
confique = { version = "0.4.0", features = ["toml"] }
pgp = "0.19.0"
rand = "0.8.5"
sequoia-openpgp = {version = "2.2.0", default-features = false }
sequoia-sop = "0.37.3"

[features]
default = ["sequoia-openpgp/default"]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-openssl = ["sequoia-openpgp/crypto-openssl"]
crypto-botan = ["sequoia-openpgp/crypto-botan"]
crypto-botan2 = ["sequoia-openpgp/crypto-botan2"]
crypto-rust = ["sequoia-openpgp/crypto-rust"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
allow-experimental-crypto = ["sequoia-openpgp/allow-experimental-crypto"]
allow-variable-time-crypto = ["sequoia-openpgp/allow-variable-time-crypto"]
